2010-06-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.2

	* debian/*: Similarly updated for new release to Debian

2010-06-08  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppCommon.cpp: track if demangling is available (currently only 
	available with gcc)

2010-06-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.1

	* debian/*: Similarly updated for new release to Debian

2010-06-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-extending*: Extended mini vignette "Rcpp-extending"

2010-06-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-extending*: Added new mini vignette "Rcpp-extending"

2010-06-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ*: Extended mini vignette "Rcpp-FAQ"

2010-06-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-FAQ*: Added new mini vignette "Rcpp-FAQ"

2010-06-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h:
	* R/Module.R: support for properties of C++ objects

2010-06-03  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppCommn.cpp: added show method for C++Object and C++Class

	* inst/include/Rcpp/XPtr.h: getTag and getProtected are deprecated, will be
	removed in Rcpp 0.8.2. methods tag and prot should be used instead. The new
	methods support both lhs and rhs use.

2010-06-02  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/traits/r_type_traits.h: added missing support for
	std::complex<double>, needed by RcppArmadillo

	* src/RcppCommon.cpp: added internal .Call function as_character_externalptr
	to extract the address of the pointer wrapped by an external pointer

2010-06-01  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-package*: new mini vignette "Rcpp-package" to improve the
	documentation of Rcpp.package.skeleton and details the steps involved in
	making a package that uses Rcpp

	* inst/doc/Rcpp-modules/Rcpp-modules.Rnw: document how to use modules